--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>GoMyTech</title>
+    <link rel="stylesheet" href="./css/styles.css" />
+    <title>My portfolio</title>
   </head>
   <body>
     <header>
-      <nav>
+      <nav class="myNav">
         <ul>
           <li>
             <a href="#home"> Home</a>
@@ -22,17 +23,18 @@
       </nav>
     </header>
     <section id="home">
-      <div class="me">
-        <img
-          src="./res/danial-ricaros-785707-unsplash-1520x1013.jpg"
-          alt="me"
-        />
-        <p>
-          As a pationate with the new technologie, I choose the web development
-          because it's a world where every thing move so fast, there is always
-          something new to learn, every day is a new challenge for me.
-        </p>
-      </div>
+      <!-- <div class="me"> -->
+      <img
+        id="myImage"
+        src="./res/danial-ricaros-785707-unsplash-1520x1013.jpg"
+        alt="me"
+      />
+      <p class="describe-me">
+        As a pationate with the new technologie, I choose the web development<br />
+        because it's a world where every thing move so fast, there is always<br />
+        something new to learn, every day is a new challenge for me.
+      </p>
+      <!-- </div> -->
     </section>
     <section id="about">
       <ol>
@@ -53,7 +55,7 @@
         </li>
       </ol>
       <iframe
-        width="1318"
+        width="80%"
         height="641"
         src="https://www.youtube.com/embed/z2jgLckP8O8"
         frameborder="0"
@@ -70,7 +72,8 @@
         <label for="PhoneNumber">Phone Number: </label>
         <input type="Number" name="PhoneNumber" />
         <label for="Comment">Comment: </label>
-        <input type="textarea" name="Comment" />
+        <textarea name="Comment" aria-rowspan="5"></textarea>
+        <button type="submit" class="btn">Send</button>
       </form>
     </section>
   </body>
